--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+/* 
 html,
 body {
   padding: 0;
@@ -16,4 +19,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
+} */
